--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch>=2.1.2
-torchvision>=0.16.2
-torchaudio>=2.1.2
-numpy>=1.26.3
-python-chess>=1.999
+torch==2.2.0
+torchvision==0.17.0
+torchaudio==2.2.0
+numpy==1.26.3
+python-chess==1.999
