--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 models.zip filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
